sumo/tests/netconvert/errors/XML/broken_edge/edge#type__false1/errors.netconvert
Error: Type 'xxx' used by edge '1' was not defined.
Quitting (on error).
